# buddy

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: init.rs
